--- a/code/jarvis/basic_eda.ipynb
+++ b/code/jarvis/basic_eda.ipynb
@@ -141,9 +141,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:46:30,114 - jarvis_project - INFO - Project configuration loaded.\n",
-      "2025-11-18 19:46:30,115 - jarvis_project - INFO - Dataset: dft_3d\n",
-      "2025-11-18 19:46:30,116 - jarvis_project - INFO - Store directory: /shared/data/jarvis\n"
+      "2025-11-18 20:45:56,129 - jarvis_project - INFO - Project configuration loaded.\n",
+      "2025-11-18 20:45:56,130 - jarvis_project - INFO - Dataset: dft_3d\n",
+      "2025-11-18 20:45:56,131 - jarvis_project - INFO - Store directory: /shared/data/jarvis\n"
      ]
     },
     {
@@ -157,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:46:31,348 - jarvis_project - INFO - Dataset shape: (75993, 64)\n"
+      "2025-11-18 20:45:57,375 - jarvis_project - INFO - Dataset shape: (75993, 64)\n"
      ]
     },
     {
@@ -196,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:46:31,357 - jarvis_project - INFO - Features: ['jid', 'spg_number', 'spg_symbol', 'formula', 'formation_energy_peratom', 'func', 'optb88vdw_bandgap', 'atoms', 'slme', 'magmom_oszicar', 'spillage', 'elastic_tensor', 'effective_masses_300K', 'kpoint_length_unit', 'maxdiff_mesh', 'maxdiff_bz', 'encut', 'optb88vdw_total_energy', 'epsx', 'epsy', 'epsz', 'mepsx', 'mepsy', 'mepsz', 'modes', 'magmom_outcar', 'max_efg', 'avg_elec_mass', 'avg_hole_mass', 'icsd', 'dfpt_piezo_max_eij', 'dfpt_piezo_max_dij', 'dfpt_piezo_max_dielectric', 'dfpt_piezo_max_dielectric_electronic', 'dfpt_piezo_max_dielectric_ionic', 'max_ir_mode', 'min_ir_mode', 'n-Seebeck', 'p-Seebeck', 'n-powerfact', 'p-powerfact', 'ncond', 'pcond', 'nkappa', 'pkappa', 'ehull', 'Tc_supercon', 'dimensionality', 'efg', 'xml_data_link', 'typ', 'exfoliation_energy', 'spg', 'crys', 'density', 'poisson', 'raw_files', 'nat', 'bulk_modulus_kv', 'shear_modulus_gv', 'mbj_bandgap', 'hse_gap', 'reference', 'search']\n"
+      "2025-11-18 20:45:57,386 - jarvis_project - INFO - Features: ['jid', 'spg_number', 'spg_symbol', 'formula', 'formation_energy_peratom', 'func', 'optb88vdw_bandgap', 'atoms', 'slme', 'magmom_oszicar', 'spillage', 'elastic_tensor', 'effective_masses_300K', 'kpoint_length_unit', 'maxdiff_mesh', 'maxdiff_bz', 'encut', 'optb88vdw_total_energy', 'epsx', 'epsy', 'epsz', 'mepsx', 'mepsy', 'mepsz', 'modes', 'magmom_outcar', 'max_efg', 'avg_elec_mass', 'avg_hole_mass', 'icsd', 'dfpt_piezo_max_eij', 'dfpt_piezo_max_dij', 'dfpt_piezo_max_dielectric', 'dfpt_piezo_max_dielectric_electronic', 'dfpt_piezo_max_dielectric_ionic', 'max_ir_mode', 'min_ir_mode', 'n-Seebeck', 'p-Seebeck', 'n-powerfact', 'p-powerfact', 'ncond', 'pcond', 'nkappa', 'pkappa', 'ehull', 'Tc_supercon', 'dimensionality', 'efg', 'xml_data_link', 'typ', 'exfoliation_energy', 'spg', 'crys', 'density', 'poisson', 'raw_files', 'nat', 'bulk_modulus_kv', 'shear_modulus_gv', 'mbj_bandgap', 'hse_gap', 'reference', 'search']\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:46:32,969 - jarvis_project - INFO - DataFrame info:\n",
+      "2025-11-18 20:45:57,941 - jarvis_project - INFO - DataFrame info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 75993 entries, 0 to 75992\n",
       "Data columns (total 64 columns):\n",
@@ -13024,8 +13024,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-18 19:46:55,201 - jarvis_project - INFO - Known transparent semiconductors found: 218\n",
-      "2025-11-18 19:46:55,208 - jarvis_project - INFO - \n",
+      "2025-11-18 20:46:04,420 - jarvis_project - INFO - Known transparent semiconductors found: 218\n",
+      "2025-11-18 20:46:04,427 - jarvis_project - INFO - \n",
       "                jid formula  optb88vdw_bandgap\n",
       "247     JVASP-22644     SiC              2.273\n",
       "539     JVASP-97862    SiO2              5.621\n",
@@ -13489,7 +13489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "285d6216",
    "metadata": {},
    "outputs": [
@@ -13535,9 +13535,20 @@
     "    if c in df_known.columns:\n",
     "        df_known[c] = df_known[c].astype(str)\n",
     "\n",
+    "# Drop High‑Cardinality Categorical Columns\n",
+    "high_cardinality = [\"xml_data_link\", \"reference\", \"search\", \"icsd\"]\n",
+    "df = df.drop(columns=high_cardinality, errors=\"ignore\")\n",
+    "\n",
     "# Diagnostics: show numeric vs categorical split\n",
     "numeric_cols = X_train.select_dtypes(include=[np.number]).columns.tolist()\n",
     "cat_cols = X_train.select_dtypes(include=[\"object\", \"category\"]).columns.tolist()\n",
+    "\n",
+    "# High‑Cardinality Categorical Features\n",
+    "# Use Frequency/Target Encoding Instead of OneHot Encoding for remaining\n",
+    "for col in cat_cols:\n",
+    "    if df[col].nunique() > 50:  # threshold\n",
+    "        freqs = df[col].value_counts(normalize=True)\n",
+    "        df[col] = df[col].map(freqs)\n",
     "print(\"Numeric feature columns:\", numeric_cols)\n",
     "print(\"Categorical feature columns:\", cat_cols)\n",
     "\n",
@@ -13547,13 +13558,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "e038d73a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "# Fit and evaluate\n",
     "pipe.fit(X_train, y_train)\n",
     "y_pred = pipe.predict(X_val)\n",
@@ -13568,9 +13589,7 @@
     "\n",
     "print(\"\\nExternal evaluation (known formulas):\")\n",
     "print(classification_report(y_known, y_known_pred))\n",
-    "print(confusion_matrix(y_known, y_known_pred))\n",
-    "\n",
-    "\n"
+    "print(confusion_matrix(y_known, y_known_pred))"
    ]
   },
   {
