we edit json directly now. we are the code. ;-)

--- a/src/jarvis/notebooks/discovery.ipynb
+++ b/src/jarvis/notebooks/discovery.ipynb
@@ -501,7 +501,7 @@
     "\n",
     "with torch.no_grad():\n",
     "    #for X_num, X_cat_dict, counts, graphs, y in full_loader:\n",
-    "    for X_num, X_cat_dict, counts, graphs, y in tqdm(loader, desc=\"Evaluating\", unit=\"batch\"):\n",
+    "    for X_num, X_cat_dict, counts, graphs, y in tqdm(full_loader, desc=\"Evaluating\", unit=\"batch\"):\n",
     "        logits = model(X_num, X_cat_dict, counts, graphs)\n",
     "    \n",
     "        logits = model(X_num, X_cat_dict, counts, graphs)\n",
